--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_signout">Signout</string>
     <string name="medication">Medication</string>
     <string name="diet">Diet</string>
     <string name="vital_signs">Vital Signs</string>
