Add forget password functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="notification">Notification</string>
     <string name="profile">Profile</string>
     <string name="communication">Communication</string>
+    <string name="title_activity_forget_password">ForgetPassword</string>
 </resources>
